(library
  (name elm)
  (flags (-warn-error +A))
  (libraries core
             yojson
             re2
             str
             reason
             ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving.std
                   ppx_deriving_yojson
                   ))
  (modules elm)
)

(library
  (name translate)
  (flags (-warn-error +A))
  (libraries elm
             core
             yojson
             re2
             str
             reason
             ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving.std
                   ppx_deriving_yojson
                   ))
  (modules translate)
)

(executable
  (name philip2)
  (flags (-warn-error +A))
  (libraries translate)
  (preprocess (pps ppx_deriving.std))
  (modules philip2)
)

